--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">O Colégio Estadual Ivanilde de Noronha – Ensino Fundamental e Médio foi criado pelo Decreto n. 13 889, de 20 de dezembro de 1957, publicado no Diário Oficial do Estado de 10 de janeiro de 1958, com o nome de Grupo Escolar Ivanilde de Noronha.</p>
+            <p class="escola-texto-um">O nome Ivanilde de Noronha foi dado como homenagem à filha de um dos colonizadores de Arapongas, Orlando Gonçalves Noronha, funcionário da Companhia de Terras Norte do Paraná, companhia que loteou os primeiros terrenos da cidade.</p>
             <p class="escola-texto-um">O Colegio Estadual Ivanilde De Noronha tem como objetivo ensinar Matemática ||, através do ensino de Programação.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e a
                 turma favorita por todos os professores e professoras que nos ajudam!</p>
+                <h2 class="escola-titulo">O Colégio Estadual Ivanilde de Noronha – Ensino Fundamental e Médio tem o seguinte endereço:</h2>
+                <p class="escola-texto-um">Município: Arapongas</p>
+                <p class="escola-texto-um">Rua Rouxinol, n. 2008</p>
+                <p class="escola-texto-um">Vila Aparecida</p>
+                <p class="escola-texto-um">Cep: 86 706 190</p>
+                <p class="escola-texto-um">Telefone: (043) 3275 2244</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
